# cloudflareRDB-gui

./: .gitignore  README.md  electron-builder.yml  index.html  package-lock.json  package.json  test_rdp.ps1  test_sspi.c  tsconfig.json  tsconfig.main.json  tsconfig.preload.json  vcpkg.json  vite.config.ts
.github/workflows/: build-and-release.yml  build.yml
docs/: RDP_NATIVE_ADDON.md  REPLICATE_FROM_SCRATCH.md  TUNNELGATE_COMPLETE.md
scripts/: build-native.js  crop-logo.ps1  download-freerdp.js  generate-icons.ps1
src/main/: bootstrap.ts  credentialStore.ts  index.ts  ipcHandlers.ts  logger.ts  rdpViewManager.ts  store.ts  tunnelManager.ts
src/native/rdp-addon/: CMakeLists.txt  binding.gyp  rdp_module.cpp  rdp_session.cpp  rdp_session.h
src/preload/: index.ts
src/renderer/: App.tsx  index.css  types.d.ts
src/renderer/components/: LogViewer.tsx  RdpCanvas.tsx  TunnelCard.tsx  TunnelForm.tsx
src/renderer/hooks/: useLogs.ts  useTunnels.ts
src/renderer/views/: Logs.tsx  RdpView.tsx  Settings.tsx  Tunnels.tsx
src/shared/: types.ts
vcpkg-overlay/ports/freerdp/: DontInstallSystemRuntimeLibs.patch  cmake-project-include.cmake  find-dependency.patch  keep-dup-libs.patch  portfile.cmake  sspi-packaged-unicode.patch  vcpkg.json
