cmake_minimum_required(VERSION 3.20)
project(rdp_addon LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

find_package(FreeRDP CONFIG QUIET)
find_package(FreeRDP-Client CONFIG QUIET)
find_package(WinPR CONFIG QUIET)

if(TARGET freerdp)
  message(STATUS "Found FreeRDP (vcpkg)")
  set(FREERDP_TARGET freerdp)
  set(FREERDP_CLIENT_TARGET freerdp-client)
  set(WINPR_TARGET winpr)
else()
  message(FATAL_ERROR "FreeRDP CMake config not found.\nInstall via vcpkg: vcpkg install freerdp:x64-windows\nThen set -DCMAKE_TOOLCHAIN_FILE=<vcpkg>/scripts/buildsystems/vcpkg.cmake")
endif()

add_library(rdp_addon SHARED rdp_module.cpp rdp_session.cpp ${CMAKE_JS_SRC})
target_include_directories(rdp_addon PRIVATE ${CMAKE_CURRENT_SOURCE_DIR} ${CMAKE_JS_INC} ${NAPI_DIR})
target_link_libraries(rdp_addon PRIVATE ${FREERDP_TARGET} ${FREERDP_CLIENT_TARGET} ${WINPR_TARGET} ${CMAKE_JS_LIB})
set_target_properties(rdp_addon PROPERTIES PREFIX "" SUFFIX ".node")
